--- a/project_report.html
+++ b/project_report.html
@@ -2530,17 +2530,17 @@ short video.</h3>
 <li>what are the new features.</li>
 <li>Take some screen to demonstrate the features if applicable.</li>
 </ol>
-<p>At the start, I wanted to develop and demonstrate a fully working
-instance of the project by decomposing it thouroughly. This however was
-troublesome as this ended going over the 30 minute project requirement.
-In the back end, I ensured to cut down the content and streamlined it to
-focus on the user interface along with the API demo.</p>
-<p>In addition to the video, I have included the presentation slides in
-the project-demonstration folder. Furthermore, there is a carefully
-crafted final report on the project, published in PDF. These materials
-complement the core presentation and provide the necessary deeper
-context for the project on which the delivery of the project was built
-upon.</p>
+<p>To begin with, I had a different idea in mind in the sense that I
+would have covered the entire project concept and how to go about it
+from the start until the end in detail. With that said, the length
+exceeded the minimum required 30 minutes set by the guidelines of this
+video. Consequently, I can only shorten the video and primarily
+concentrate on the user interface alongside the API demonstration.</p>
+<p>Along with the video, the presentation slides can also be found in
+the project demonstration folder. Furthermore, a additional final
+project report has been created and it is in a sense of more
+well-organized. Overall, these additional resources should assist to
+gain a better overview of the entire project delivery.</p>
 <p><strong>References</strong></p>
 <ol class="incremental" type="1">
 <li>CP630OC project</li>
